Adição do header em todas as páginas
- Código HTML + CSS.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <link rel="stylesheet" href="style/base.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="index.html" class="nav-nome">Caio Montenegro</a>
 
-    <main>oi</main>
+            <div class="nav-containerItens">
+                <a href="index.html" class="nav-pagAtual">Home</a>
+                <a href="pages/projetos.html" target="_blank">Projetos</a>
+                <a href="pages/sobre.html" target="_blank">Sobre</a>
+                <a href="pages/contato.html" target="_blank">Contato</a>
+            </div>
+        </nav>
+    </header>
+
+    <main></main>
 
     <footer></footer>
 </body>
