--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -10,7 +10,18 @@
     <link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="../index.html" target="_blank" class="nav-nome">Caio Montenegro</a>
+
+            <div class="nav-containerItens">
+                <a href="../index.html" target="_blank"">Home</a>
+                <a href="projetos.html" class="nav-pagAtual">Projetos</a>
+                <a href="sobre.html" target="_blank">Sobre</a>
+                <a href="contato.html" target="_blank">Contato</a>
+            </div>
+        </nav>
+    </header>
 
     <main></main>
 
