--- a/index.html
+++ b/index.html
@@ -8,17 +8,33 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style/base.css">
+    <!-- Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- JS -->
+    <script src="js/header.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="nav-nome">Caio Montenegro</a>
+            <!-- Div que engloba o nome e o menu hamburguer do header -->
+            <div class="nomeIcone">
+                <a href="index.html" class="nav-nome">Caio Montenegro</a>
+    
+                <!-- Abrir menu -->
+                <i class="bi bi-list icon-menuHeader"></i>
+                <!-- Fechar menu -->
+                <i class="bi bi-x-lg icon-menuHeader"></i>
+            </div>
 
+            <!-- Container que engloba os itens de navegação da nav -->
             <div class="nav-containerItens">
-                <a href="index.html" class="nav-pagAtual">Home</a>
-                <a href="pages/projetos.html" target="_blank">Projetos</a>
-                <a href="pages/sobre.html" target="_blank">Sobre</a>
-                <a href="pages/contato.html" target="_blank">Contato</a>
+                <!-- Lista dos itens de navegação da nav -->
+                <ul>
+                    <li><a href="index.html" class="nav-pagAtual">Home</a></li>
+                    <li><a href="pages/projetos.html" target="_blank">Projetos</a></li>
+                    <li><a href="pages/sobre.html"    target="_blank">Sobre</a></li>
+                    <li><a href="pages/contato.html"  target="_blank">Contato</a></li>
+                </ul>
             </div>
         </nav>
     </header>
