Criação da main da Home
Obs: Precisei adicionar o arquivo da imagem (Caio.jpg) porque esqueci de de adicioná-la na pasta anteriormente.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/sobre.css">
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
@@ -39,7 +40,33 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <!-- Informações + Botões -->
+        <section class="mainParte1">
+            <h1>Bem-vindo(a) ao meu portifólio! <br> Eu sou <span>Caio Montenegro</span>.</h1>
+
+            <p>Desenvolvedor Web Front-end</p>
+
+            <!-- Container dos botões -->
+            <div>
+                <a href="pages/projetos.html"   target="_blank"><button class="buttonsMainHome">Projetos</button></a>
+                <a href="pages/sobre.html"   target="_blank"><button class="buttonsMainHome">Sobre</button></a>
+                <a href="pages/contato.html" target="_blank"><button class="buttonsMainHome">Contato</button></a>
+            </div>
+        </section>
+
+        <!-- Imagem + Redes sociais -->
+        <section class="mainParte2">
+            <img src="img/Caio.jpg" alt="Imagem de Caio Montenegro">
+
+            <!-- Container das redes sociais -->
+            <div>
+                <a href="https://github.com/CaioMBM" target="_blank"><i class="bi bi-github icon-redeSocial"></i></a>
+                <a href="https://www.linkedin.com/in/caio-montenegro-486571250/" target="_blank"><i class="bi bi-linkedin icon-redeSocial"></i></a>
+                <a href="https://www.instagram.com/ccaiokj" target="_blank"><i class="bi bi-instagram icon-redeSocial"></i></a>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
