--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style/base.css">
-    <link rel="stylesheet" href="style/sobre.css">
+    <link rel="stylesheet" href="style/home.css">
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
