--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
 
             <!-- Container das redes sociais -->
             <div>
+                <!-- Ícones das redes sociais  -->
+                <!-- Github -->
                 <a href="https://github.com/CaioMBM" target="_blank"><i class="bi bi-github icon-redeSocial"></i></a>
+                <!-- Linkedin -->
                 <a href="https://www.linkedin.com/in/caio-montenegro-486571250/" target="_blank"><i class="bi bi-linkedin icon-redeSocial"></i></a>
+                <!-- Instagram -->
                 <a href="https://www.instagram.com/ccaiokj" target="_blank"><i class="bi bi-instagram icon-redeSocial"></i></a>
             </div>
         </section>
