--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Desenvolvido por Caio Montenegro</p>
+    </footer>
 </body>
 </html>
