--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -8,6 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../style/base.css">
+    <link rel="stylesheet" href="../style/projetos.css">
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
@@ -39,7 +40,97 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <!-- Projetos maiores -->
+        <section>
+            <!-- Título da section -->
+            <h1>Projetos maiores</h1>
+
+            <!-- Container com os projetos -->
+            <div class="containerProjetos">
+                <!-- Projeto -  Recriando Site-->
+                <div>
+                    <img src="../img/ProjetosMaiores/RecriandoSite_1600x822.jpeg" alt="Projeto -  Recriando Site">
+                    <h2 class="nomeProjeto">Recriando Site</h2>
+                </div>
+
+                <!-- Projeto - Portifolio 1 -->
+                <div>
+                    <img src="../img/ProjetosMaiores/Portifolio1_1600x822.jpeg" alt="Projeto - Portifolio 1">
+                    <h2 class="nomeProjeto">Portifolio 1</h2>
+                </div>
+
+                <!-- Projeto - FlexBlog -->
+                <div>
+                    <img src="../img/ProjetosMaiores/FlexBlog_1600x822.jpeg" alt="Projeto - FlexBlog">
+                    <h2 class="nomeProjeto">FlexBlog</h2>
+                </div>
+
+                <!-- Projeto - Eduardo Brito -->
+                <div>
+                    <img src="../img/ProjetosMaiores/EduardoBrito_1600x822.jpeg" alt="Projeto - Eduardo Brito">
+                    <h2 class="nomeProjeto nomeFreelance">Eduardo Brito</h2>
+                </div>
+
+                <!-- Projeto - Prevent Elevadores -->
+                <div>
+                    <img src="../img/ProjetosMaiores/PreventElevadores_1600x822.jpeg" alt="Projeto - Prevent Elevadores">
+                    <h2 class="nomeProjeto nomeFreelance">Prevent Elevadores</h2>
+                </div>
+            </div>
+        </section>
+
+        <!-- Projetos menores -->
+        <section>
+            <!-- Título da section -->
+            <h1>Projetos menores</h1>
+
+            <!-- Container com os projetos -->
+            <div class="containerProjetos">
+                <!-- Projeto -  Tela de Login-->
+                <div>
+                    <img src="../img/ProjetosMenores/TelaDeLogin_1600x822.jpeg" alt="Projeto -  Tela de Login">
+                    <h2 class="nomeProjeto">Tela de Login</h2>
+                </div>
+
+                <!-- Projeto - Sobre Mim -->
+                <div>
+                    <img src="../img/ProjetosMenores/SobreMim_1600x822.jpeg" alt="Projeto - Sobre Mim">
+                    <h2 class="nomeProjeto">Sobre Mim</h2>
+                </div>
+
+                <!-- Projeto - Calculadore de IMC -->
+                <div>
+                    <img src="../img/ProjetosMenores/CalculoIMC_1600x822.jpeg" alt="Projeto - Calculadore de IMC ">
+                    <h2 class="nomeProjeto">Calculadore de IM</h2>
+                </div>
+
+                <!-- Projeto - Conversor de Moedas -->
+                <div>
+                    <img src="../img/ProjetosMenores/ConversorDeMoedas_1600x822.jpeg" alt="Projeto - Conversor de Moedas">
+                    <h2 class="nomeProjeto">Conversor de Moedas</h2>
+                </div>
+
+                <!-- Projeto - Card Review -->
+                <div>
+                    <img src="../img/ProjetosMenores/CardReviews_1600x822.jpeg" alt="Projeto - Card Review">
+                    <h2 class="nomeProjeto">Card Review</h2>
+                </div>
+
+                <!-- Projeto - Hora do dia -->
+                <div>
+                    <img src="../img/ProjetosMenores/ExibirHorario_1600x822.jpeg" alt="Projeto - Hora do dia">
+                    <h2 class="nomeProjeto">Hora do dia</h2>
+                </div>
+
+                <!-- Projeto - Calcular Idade -->
+                <div>
+                    <img src="../img/ProjetosMenores/Idade+Sexo_1600x822.jpeg" alt="Projeto - Calcular Idade">
+                    <h2 class="nomeProjeto">Calcular Idade</h2>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
