--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="website icon" type="png/jpg" href="img/icon-c.png">
+    <link rel="website icon" type="png/jpg" href="img/icons/icon-c.png">
     <title>Caio Montenegro | Home</title>
 
     <!-- CSS -->
