Adição das funções de abrir e fechar modal "Recriando Site"

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
     <script src="../js/header.js" defer></script>
+    <script src="../js/projetos.js" defer></script>
 </head>
 <body>
     <header>
@@ -80,10 +81,13 @@
             </div>
 
             <!-- Modais -->
-            <!-- Modal - Recriando site -->
-            <div class="modalContainer"> 
-                <!-- Modal - Caixa com conteúdo do modal -->
+            <!-- Camada que só aparece quando o modal aparecer, serve para escurescer o fundo do site -->
+            <div class="camadaPreta"> 
+                <!-- Modal - Recriando site -->
                 <div class="modalProjeto">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+    
                     <!-- Título do modal -->
                     <h2>Recriando site</h2>
     
@@ -121,7 +125,6 @@
                     <div class="containerBotoes">
                         <a href="https://github.com/CaioMBM/Projeto-1 " target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
                         <a href="https://caiombm.github.io/Projeto-1/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
-                    </div>
                 </div>
             </div>
         </section>
