Adição do modal "Portifólio 1" e de suas funções de abrir e fechar

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../style/base.css">
     <link rel="stylesheet" href="../style/projetos.css">
-    <!-- Bootstrap Icons-->
+    <!-- Bootstrap Icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
     <script src="../js/header.js" defer></script>
@@ -93,7 +93,7 @@
     
                     <!-- Caixa com imagem + data do projeto -->
                     <div class="modalImgData">
-                        <img src="../img/ProjetosMaiores/RecriandoSite_1600x822.jpeg" alt="Modal - do Projeto Recriando site">
+                        <img src="../img/ProjetosMaiores/RecriandoSite_1600x822.jpeg" alt="Modal do Projeto Recriando site">
                         <span>02/09/2023</span>
                     </div>
     
@@ -114,9 +114,9 @@
                                 <!-- Modal imagem - HTML 5 -->
                                 <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
                                 <!-- Modal imagem - CSS 3 -->
-                                <img src="../img/icons/icons-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
                                 <!-- Modal imagem - JavaScript -->
-                                <img src="../img/icons/icons-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                                <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
                             </div>
                         </div>
                     </div>
@@ -126,6 +126,52 @@
                         <a href="https://github.com/CaioMBM/Projeto-1 " target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
                         <a href="https://caiombm.github.io/Projeto-1/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                 </div>
+            </div>
+
+            <!-- Modal - Portifólio 1 -->
+            <div class="modalProjeto">
+                <!-- Modal - Ícone para fechar modal -->
+                <i class="bi bi-x-circle icon-x"></i>
+
+                <!-- Título do modal -->
+                <h2>Portifólio 1</h2>
+
+                <!-- Caixa com imagem + data do projeto -->
+                <div class="modalImgData">
+                    <img src="../img/ProjetosMaiores/Portifolio1_1600x822.jpeg" alt="Modal do Projeto Portifólio 1">
+                    <span>24/08/2024</span>
+                </div>
+
+                <!-- Caixa com informações de texto + tecnologias -->
+                <div class="modalInformacoes">
+                    <!-- Caixa com as informações de texto -->
+                    <div class="sobreProjeto">
+                        <h3 class="modalTituloTopico">SOBRE</h3>
+                        <p>Primeira versão do portfólio que fiz e foi em um período que eu estava testando o Bootstrap.</p>
+                    </div>
+
+                    <!-- Caixa com as tecnologias -->
+                    <div class="tecnologiasProjeto">
+                        <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                        <!-- Caixa com as imagens das tecnologias -->
+                        <div>
+                            <!-- Modal imagem - HTML 5 -->
+                            <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                            <!-- Modal imagem - CSS 3 -->
+                            <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                            <!-- Modal imagem - JavaScript -->
+                            <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                            <!-- Modal imagem - Bootstrap -->
+                            <img src="../img/icons/icon-Bootstrap.png" class="iconTecnologia" alt="Ícone do Bootstrap" title="Bootstrap">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Caixa dos botões -->
+                <div class="containerBotoes">
+                    <a href="https://github.com/CaioMBM/Portifolio" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                    <a href="https://caiombm.github.io/Portifolio/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
             </div>
         </section>
 
