Adição do modal "Eduardo Brito (freelance)" e de suas funções de abrir e fechar
- Adicionei o ícone do Figma em tecnologias do modal "Portifólio 1";
- Adicionei uma largura para a caixa dos ícones de tecnologia para limitar apenas 3 tecnologias por linha.

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -154,7 +154,7 @@
                         <div class="tecnologiasProjeto">
                             <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
     
-                            <!-- Caixa com as imagens das tecnologias -->
+                            <!-- Caixa com os ícones de tecnologia -->
                             <div>
                                 <!-- Modal imagem - HTML 5 -->
                                 <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
@@ -164,6 +164,8 @@
                                 <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
                                 <!-- Modal imagem - Bootstrap -->
                                 <img src="../img/icons/icon-Bootstrap.png" class="iconTecnologia" alt="Ícone do Bootstrap" title="Bootstrap">
+                                <!-- Modal imagem - Figma -->
+                                <img src="../img/icons/icon-figma.png" class="iconTecnologia" alt="Ícone do Figma" title="Figma">
                             </div>
                         </div>
                     </div>
@@ -215,6 +217,51 @@
                     <div class="containerBotoes">
                         <a href="https://github.com/CaioMBM/FlexBlog" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
                         <a href="https://caiombm.github.io/flexblog/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
+
+                <!-- Modal - Eduardo Brito (Freelance) -->
+                <div class="modalProjeto modalFreelance">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Freelance - Eduardo Brito</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMaiores/EduardoBrito_1600x822.jpeg" alt="Modal do Projeto Eduardo Brito">
+                        <span>02/07/2024</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>Projeto freelancer desenvolvido em conjunto com alguns amigos para o cliente Eduardo Brito. O cliente necessitava de um site e após algumas conversas ficou acertado de fazermos uma landipage.</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <!-- Modal imagem - JavaScript -->
+                                <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/viszsouza/LP-Eduardo-Brito-Psi" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://www.eduardobritopsi.com" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
             </div>
