Adição do modal "Prevent Elevadores (freelance)" e de suas funções de abrir e fechar

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -93,7 +93,7 @@
 
                     <!-- Caixa com imagem + data do projeto -->
                     <div class="modalImgData">
-                        <img src="../img/ProjetosMaiores/RecriandoSite_1600x822.jpeg" alt="Modal do Projeto Recriando site">
+                        <img src="../img/ProjetosMaiores/RecriandoSite_1600x822.jpeg" alt="Modal do projeto Recriando site">
                         <span>02/09/2023</span>
                     </div>
 
@@ -138,7 +138,7 @@
 
                     <!-- Caixa com imagem + data do projeto -->
                     <div class="modalImgData">
-                        <img src="../img/ProjetosMaiores/Portifolio1_1600x822.jpeg" alt="Modal do Projeto Portifólio 1">
+                        <img src="../img/ProjetosMaiores/Portifolio1_1600x822.jpeg" alt="Modal do projeto Portifólio 1">
                         <span>24/08/2024</span>
                     </div>
 
@@ -187,7 +187,7 @@
 
                     <!-- Caixa com imagem + data do projeto -->
                     <div class="modalImgData">
-                        <img src="../img/ProjetosMaiores/FlexBlog_1600x822.jpeg" alt="Modal do Projeto FlexBlog">
+                        <img src="../img/ProjetosMaiores/FlexBlog_1600x822.jpeg" alt="Modal do projeto FlexBlog">
                         <span>28/10/2024</span>
                     </div>
 
@@ -230,7 +230,7 @@
 
                     <!-- Caixa com imagem + data do projeto -->
                     <div class="modalImgData">
-                        <img src="../img/ProjetosMaiores/EduardoBrito_1600x822.jpeg" alt="Modal do Projeto Eduardo Brito">
+                        <img src="../img/ProjetosMaiores/EduardoBrito_1600x822.jpeg" alt="Modal do projeto freelance Eduardo Brito">
                         <span>02/07/2024</span>
                     </div>
 
@@ -262,6 +262,53 @@
                     <div class="containerBotoes">
                         <a href="https://github.com/viszsouza/LP-Eduardo-Brito-Psi" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
                         <a href="https://www.eduardobritopsi.com" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
+
+                <!-- Modal - Prevent Elevadores (Freelance) -->
+                <div class="modalProjeto modalFreelance">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Freelance - Prevent Elevadores</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMaiores/PreventElevadores_1600x822.jpeg" alt="Modal do projeto freelance Prevent Elevadores">
+                        <span>29/03/2025</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>Projeto freelancer desenvolvido em conjunto com um amigo para o cliente Prevent Elevadores. O cliente necessitava de um site e após algumas conversas ficou acertado de fazermos um site para falar sobre a empresa e seus serviços.</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <!-- Modal imagem - JavaScript -->
+                                <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                                <!-- Modal imagem - Figma -->
+                                <img src="../img/icons/icon-figma.png" class="iconTecnologia" alt="Ícone do Figma" title="Figma">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/viszsouza/Prevent-Elevadores" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://preventelevadores.com/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
             </div>
