Adição do modal "Tela de Login" e de suas funções de abrir e fechar
- Renomeei o nome da variável que armazena a camada preta que aparece quando o modal dos Projetos Maiores aparece e criei uma variável para guardar a camada preta dos Projetos Menores.

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -363,6 +363,54 @@
                     <h2 class="nomeProjeto">Calcular Idade</h2>
                 </div>
             </div>
+
+            <!-- Modais -->
+            <!-- Camada que só aparece quando o modal aparecer, serve para escurescer o fundo do site -->
+            <div class="camadaPreta"> 
+                <!-- Modal - Tela de Login -->
+                <div class="modalProjeto">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Tela de Login</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMenores/TelaDeLogin_1600x822.jpeg" alt="Modal do projeto Tela de Login">
+                        <span>02/09/2023</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>Foi um dos meus primeiros projetos com HTML e CSS e usando o Figma para criar o protótipo. Consiste apenas em uma tela de login.</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <!-- Modal imagem - Figma -->
+                                <img src="../img/icons/icon-figma.png" class="iconTecnologia" alt="Ícone do Figma" title="Figma">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/CaioMBM/tela_de_login" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/tela_de_login/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
         </section>
     </main>
 
