Adição do modal "Sobre Mim" e de suas funções de abrir e fechar

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -411,6 +411,49 @@
                         <a href="https://caiombm.github.io/tela_de_login/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
+
+                <!-- Modal - Sobre Mim -->
+                <div class="modalProjeto">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Sobre Mim</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMenores/SobreMim_1600x822.jpeg" alt="Modal do projeto Sobre Mim">
+                        <span>17/07/2023</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>Projeto criado a partir de um curso de HTML e CSS da Udemy.</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/CaioMBM/html-css-jsUDEMY" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/html-css-jsUDEMY/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
         </section>
     </main>
 
