--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -454,6 +454,51 @@
                         <a href="https://caiombm.github.io/html-css-jsUDEMY/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
+
+                <!-- Modal - Calculadora de IMC -->
+                <div class="modalProjeto">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Calculadora de IMC</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMenores/CalculoIMC_1600x822.jpeg" alt="Modal do projeto Calculadora de IMC">
+                        <span>13/07/2024</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>Indica o seu IMC.  Há 7 possíveis estados: muito magro (IMC menor que 17), abaixo do peso (IMC entre 17 e 18.5), peso normal (IMC entre 18.6 e 24.9), acima do peso (IMC entre 25 e 29.9), obesidade 1 (IMC entre 30 e 34.9), obesidade 2 (IMC entre 35 e 39.9) e obesidade 3 (IMC maior que 40).</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <!-- Modal imagem - JavaScript -->
+                                <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/CaioMBM/calculo-imc" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/calculo-imc/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
         </section>
     </main>
 
