--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -544,6 +544,51 @@
                         <a href="https://caiombm.github.io/html-css-jsUDEMY-2/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
+
+                <!-- Modal - Card Review -->
+                <div class="modalProjeto">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Card Review</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMenores/CardReviews_1600x822.jpeg" alt="Modal do projeto Card Review">
+                        <span>15/10/2024</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>É um projetinho que usa o JavaScript para alterar as informações do card. Diferente de um carrossel que exibe outro card ao clicar na seta, esse altera as informações do card de acordo com o que foi armazenado numa variável no JavaScript.</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <!-- Modal imagem - JavaScript -->
+                                <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/CaioMBM/card-reviews" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/card-reviews/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
         </section>
     </main>
 
