--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -354,7 +354,7 @@
                 <!-- Projeto - Hora do dia -->
                 <div>
                     <img src="../img/ProjetosMenores/ExibirHorario_1600x822.jpeg" alt="Projeto - Hora do dia">
-                    <h2 class="nomeProjeto">Hora do dia</h2>
+                    <h2 class="nomeProjeto">Hora do Dia</h2>
                 </div>
 
                 <!-- Projeto - Calcular Idade -->
@@ -587,6 +587,51 @@
                     <div class="containerBotoes">
                         <a href="https://github.com/CaioMBM/card-reviews" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
                         <a href="https://caiombm.github.io/card-reviews/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                    </div>
+                </div>
+
+                <!-- Modal - Hora do Dia -->
+                <div class="modalProjeto">
+                    <!-- Modal - Ícone para fechar modal -->
+                    <i class="bi bi-x-circle icon-x"></i>
+
+                    <!-- Título do modal -->
+                    <h2>Hora do Dia</h2>
+
+                    <!-- Caixa com imagem + data do projeto -->
+                    <div class="modalImgData">
+                        <img src="../img/ProjetosMenores/ExibirHorario_1600x822.jpeg" alt="Modal do projeto Hora do Dia">
+                        <span>20/09/2023</span>
+                    </div>
+
+                    <!-- Caixa com informações de texto + tecnologias -->
+                    <div class="modalInformacoes">
+                        <!-- Caixa com as informações de texto -->
+                        <div class="sobreProjeto">
+                            <h3 class="modalTituloTopico">SOBRE</h3>
+                            <p>Projeto criado a partir de um curso de JavaScrit do Curso em Vídeo. Com JavaScript, é pego o horário de seu dispositivo e usa estrutura condicional para pegar e com isso altera a imagem e a cor de fundo, além de mostrar o horário exato de seu dispositivo.</p>
+                        </div>
+
+                        <!-- Caixa com as tecnologias -->
+                        <div class="tecnologiasProjeto">
+                            <h3 class="modalTituloTopico">TECNOLOGIAS</h3>
+
+                            <!-- Caixa com as imagens das tecnologias -->
+                            <div>
+                                <!-- Modal imagem - HTML 5 -->
+                                <img src="../img/icons/icon-html5.png" class="iconTecnologia" alt="Ícone do HTML 5" title="HTML 5">
+                                <!-- Modal imagem - CSS 3 -->
+                                <img src="../img/icons/icon-css3.png" class="iconTecnologia" alt="Ícone do CSS 3" title="CSS 3">
+                                <!-- Modal imagem - JavaScript -->
+                                <img src="../img/icons/icon-javascript.png" class="iconTecnologia" alt="Ícone do JavaScript" title="JavaScript">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Caixa dos botões -->
+                    <div class="containerBotoes">
+                        <a href="https://github.com/CaioMBM/ExercicioDeCondicoesJS-CursoEmVideo" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/ExercicioDeCondicoesJS-CursoEmVideo/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
         </section>
