--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -80,6 +80,17 @@
                 </div>
             </div>
 
+            <!-- Carrossel - Container dos Botões -->
+            <div class="carrosselProjMaior"> <!-- Serve apenas para ocultar a caixa dos botões -->
+                <!-- Caixa com os botões do carrosel -->
+                <div class="carrosselBotoes">
+                    <i class="bi bi-arrow-left-square-fill setas"></i>
+                    <!-- Linha divisória dos botões -->
+                    <span></span>
+                    <i class="bi bi-arrow-right-square-fill setas"></i>
+                </div>
+            </div>
+
             <!-- Modais -->
             <!-- Camada que só aparece quando o modal aparecer, serve para escurescer o fundo do site -->
             <div class="camadaPreta"> 
@@ -679,6 +690,7 @@
                         <a href="https://caiombm.github.io/Ex2DeCondicoesJS-CursoEmVideo/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
 
