Adição da responsividade na main - Projetos menores de Projetos
- Precisei alterar o nome das variáveis e funções para diferenciar as que estão sendo usadas para os projetos maiores e as que estão sendo usadas para os projetos menores.

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -375,6 +375,17 @@
                 </div>
             </div>
 
+            <!-- Carrossel - Container dos Botões -->
+            <div class="carrosselProjMaior"> <!-- Serve apenas para ocultar a caixa dos botões -->
+                <!-- Caixa com os botões do carrosel -->
+                <div class="carrosselBotoes">
+                    <i class="bi bi-arrow-left-square-fill setas"></i>
+                    <!-- Linha divisória dos botões -->
+                    <span></span>
+                    <i class="bi bi-arrow-right-square-fill setas"></i>
+                </div>
+            </div>
+
             <!-- Modais -->
             <!-- Camada que só aparece quando o modal aparecer, serve para escurescer o fundo do site -->
             <div class="camadaPreta"> 
