Adição da responsividade em todos os modais da main de Projetos

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -134,8 +134,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/Projeto-1 " target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/Projeto-1/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/Projeto-1 " target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/Projeto-1/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -183,8 +183,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/Portifolio" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/Portifolio/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/Portifolio" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/Portifolio/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -226,8 +226,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/FlexBlog" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/flexblog/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/FlexBlog" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/flexblog/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -271,8 +271,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/viszsouza/LP-Eduardo-Brito-Psi" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://www.eduardobritopsi.com" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/viszsouza/LP-Eduardo-Brito-Psi" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://www.eduardobritopsi.com" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -318,8 +318,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/viszsouza/Prevent-Elevadores" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://preventelevadores.com/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/viszsouza/Prevent-Elevadores" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://preventelevadores.com/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
             </div>
@@ -429,8 +429,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/tela_de_login" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/tela_de_login/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/tela_de_login" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/tela_de_login/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -472,8 +472,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/html-css-jsUDEMY" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/html-css-jsUDEMY/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/html-css-jsUDEMY" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/html-css-jsUDEMY/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -517,8 +517,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/calculo-imc" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/calculo-imc/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/calculo-imc" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/calculo-imc/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -562,8 +562,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/html-css-jsUDEMY-2" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/html-css-jsUDEMY-2/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/html-css-jsUDEMY-2" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/html-css-jsUDEMY-2/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -607,8 +607,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/card-reviews" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/card-reviews/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/card-reviews" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/card-reviews/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -652,8 +652,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/ExercicioDeCondicoesJS-CursoEmVideo" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/ExercicioDeCondicoesJS-CursoEmVideo/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/ExercicioDeCondicoesJS-CursoEmVideo" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/ExercicioDeCondicoesJS-CursoEmVideo/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
 
@@ -697,8 +697,8 @@
 
                     <!-- Caixa dos botões -->
                     <div class="containerBotoes">
-                        <a href="https://github.com/CaioMBM/Ex2DeCondicoesJS-CursoEmVideo" target="_blank" class="modalBotao">REPOSITÓRIO DO PROJETO</a>
-                        <a href="https://caiombm.github.io/Ex2DeCondicoesJS-CursoEmVideo/" target="_blank" class="modalBotao">ACESSAR O PROJETO</a>
+                        <a href="https://github.com/CaioMBM/Ex2DeCondicoesJS-CursoEmVideo" target="_blank" class="modalBotao btnRepositorio">REPOSITÓRIO DO PROJETO</a>
+                        <a href="https://caiombm.github.io/Ex2DeCondicoesJS-CursoEmVideo/" target="_blank" class="modalBotao btnProjeto">ACESSAR O PROJETO</a>
                     </div>
                 </div>
             </div>
