Adição do footer em Projetos

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -705,6 +705,8 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Desenvolvido por Caio Montenegro</p>
+    </footer>
 </body>
 </html>
