--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -8,6 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../style/base.css">
+    <link rel="stylesheet" href="../style/sobre.css">
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- JS -->
@@ -39,7 +40,50 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <!-- Section sobre + Tecnologias e Ferramentas -->
+        <section id="SobreTec">
+            <!-- Sobre Mim-->
+            <div id="sobreMim">
+                <h1>Sobre Mim</h1>
+                <p>Eu sou Caio Montenegro, tenho 21 anos, sou de Recife-PE (onde também moro) e terminei a faculdade de Tecnólogo em Análise e Desenvolvimento de Sistemas no final de 2024. Minha jornada como desenvolvedor web front-end no primeiro semestre de 2023 e desde então venho estudando e procurando descobrir mais sobre como montar protótipos e transformar protótipos em código.</p>
+            </div>
+
+            <!-- Tecnologias e Ferramentas -->
+            <div id="TecsFerramentas">
+                <h1>Tecnologias e Ferramentas</h1>
+
+                <!-- Container com os icos -->
+                <div class="containerIconsTecs">
+                    <!-- Icon - HTML 5 -->
+                    <div class="contentIcosTecs">
+                        <img src="../img/icons/icon-html5.png" alt="Ícone do HTML 5" title="HTML 5">
+                        <span>HTML 5</span>
+                    </div>
+                    <!-- Icon - CSS 3 -->
+                    <div class="contentIcosTecs">
+                        <img src="../img/icons/icon-css3.png" alt="Ícone do CSS 3" title="CSS 3">
+                        <span>CSS 3</span>
+                    </div>
+                    <!-- Icon - JavaScript -->
+                    <div class="contentIcosTecs">
+                        <img src="../img/icons/icon-javascript.png" alt="Ícone do JavaScript" title="JavaScript">
+                        <span>JavaScript</span>
+                    </div>
+                    <!-- Icon - Figma -->
+                    <div class="contentIcosTecs">
+                        <img src="../img/icons/icon-figma.png" alt="Ícone do Figma" title="Figma">
+                        <span>Figma</span>
+                    </div>
+                    <!-- Icon - GitHub -->
+                    <div class="contentIcosTecs">
+                        <img src="../img/icons/icon-github.png" alt="Ícone do GitHub" title="GitHub">
+                        <span>GitHub</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
